fixing flicker

--- a/tic.css
+++ b/tic.css
@@ -2,6 +2,7 @@ body {
 	font-family: Gotham, "Proxima Nova", Helvetica, sans-serif;
 	margin: 0;
 	padding: 0;
+	visibility: hidden;
 }
 
 body.game-over {
